# Brain-viewer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/src/brain_viewer/: __init__.py  api.py  db.py  hashing.py  main.py  sidecar.py  timeline.py  ws.py
docs/orchestration/2026-02-19_design-review/briefs/: brief_codex_r1.md  brief_gemini_r1.md
docs/orchestration/2026-02-19_design-review/outputs/: review_codex_r1.md  review_gemini_r1.md
docs/orchestration/2026-02-19_design-review/synthesis/: round_1_synthesis.md
docs/plans/: 2026-02-19-brain-viewer-design.md  2026-02-20-settings-panel-design.md  brainstorm.txt
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DetailPanel.tsx  EdgeLines.tsx  Filters.tsx  GraphScene.tsx  NodeLabels.tsx  NodeMesh.tsx  SearchBar.tsx  SettingsPanel.tsx  SpeedIndicator.tsx  ThemePicker.tsx  Timeline.tsx
frontend/src/hooks/: useRealtime.ts
frontend/src/lib/: api.ts  nodeSize.ts  types.ts
frontend/src/store/: graphStore.ts  replayStore.ts  settingsStore.ts  uiStore.ts
frontend/src/themes/: clean.json  neural.json  organic.json  registry.ts
frontend/src/types/: d3-force-3d.d.ts
frontend/src/workers/: layoutWorker.ts
scripts/: Brain Viewer.lnk  check_console.py  create_shortcut.ps1  debug_colors.py  debug_screenshot.py  delegate.sh  launch.bat  launcher.pyw  loading.html  screenshot.py  screenshot_debug.py  stop.bat
(+32 files in other folders)
