[project]
name = "brain-viewer"
version = "0.1.0"
description = "3D Knowledge Graph visualizer backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "numpy>=1.26.0",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_viewer"]
